Change float to double.